--- a/src/Comet.Account/Comet.Account.config
+++ b/src/Comet.Account/Comet.Account.config
@@ -3,15 +3,15 @@
 "Hostname": "localhost",
 "Schema": "account_zf",
 "Username": "root",
-"Password": "1234"
+"Password": "password"
 },
 "Network": {
-"IPAddress": "0.0.0.0",
+"IPAddress": "192.168.0.106",
 "Port": 9958,
 "MaxConn": 100
 },
 "RealmNetwork": {
-"IPAddress": "0.0.0.0",
+"IPAddress": "127.0.0.1",
 "Port": 9865,
 "MaxConn": 100
 }
