--- a/src/Comet.Game/Comet.Game.config
+++ b/src/Comet.Game/Comet.Game.config
@@ -3,14 +3,14 @@
 "Hostname": "localhost",
 "Schema": "zf",
 "Username": "root",
-"Password": "1234"
+"Password": "password"
 },
 "GameNetwork": {
-"IPAddress": "0.0.0.0",
+"IPAddress": "192.168.0.106",
 "Port": 5816,
 "MaxConn": 500,
 "ServerIdentity": 1,
-"ServerName": "Brasil",
+"ServerName": "Dark",
 "Username": "uOIMI9WHOMooKY0x",
 "Password": "epPQ8dTJhtxxCobJ"
 },
