--- a/tests/Comet.Account.Tests/Comet.Account.Tests.csproj
+++ b/tests/Comet.Account.Tests/Comet.Account.Tests.csproj
@@ -1,23 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-
+    <TargetFramework>net7.0</TargetFramework>
     <IsPackable>false</IsPackable>
-
     <AssemblyVersion>1.2021.0304.8</AssemblyVersion>
-
     <FileVersion>1.2021.0304.25</FileVersion>
-
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
-
     <Configurations>Debug;Release;DebugProduction;Debug Windows (x64)</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <!-- Updated package references to the latest versions compatible with .NET 7.0 -->
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
